[package]
name = "rust"
version = "0.1.0"
authors = ["bsdb0y <neerajpal09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
generator = "0.6.23"
indexmap = "1.6.1"
